Added more markdown

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imports:\n",
-    "Importing all necessary libraries"
+    "# Jupyter notebook problem set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing all necessary libraries"
    ]
   },
   {
@@ -27,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Brief summary of what is the Iris data"
+    "## Brief summary of what is the Iris data"
    ]
   },
   {
@@ -45,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Ploting the data"
+    "## Ploting the data"
    ]
   },
   {
@@ -98,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Ploting the data using differnt color for each specie of flower"
+    "## Ploting the data using differnt color for each specie of flower"
    ]
   },
   {
@@ -148,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Use Seaborn"
+    "## Using Seaborn to plot all data"
    ]
   },
   {
@@ -180,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Fit a line"
+    "## Calculating the best fit and plotting"
    ]
   },
   {
@@ -222,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "R**2"
+    "## Calculating the coefficient of determination"
    ]
   },
   {
@@ -247,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Fit another line"
+    "## Calculating the best fit for setosa only"
    ]
   },
   {
@@ -283,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Calculate the R-squared value"
+    "## Calculating the coefficient of determination for setosa"
    ]
   },
   {
@@ -292,7 +298,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope ,intercept ,rValue,pValue,stderr  = sci.stats.linregress(plSetosa, pwSetosa)\n"
+    "slope ,intercept ,rValue,pValue,stderr  = sci.stats.linregress(plSetosa, pwSetosa)\n",
+    "print(rValue)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manually calculating the best fit"
    ]
   },
   {
